tests/baselines/reference/ES5For-ofTypeCheck8(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5For-ofTypeCheck8.ts(3,6): error TS2322: Type 'string | number | symbol' is not assignable to type 'symbol'.
  Type 'string' is not assignable to type 'symbol'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5For-ofTypeCheck8.ts (1 errors) ====
    declare var union: string | string[]| number[]| symbol[];
    var v: symbol;
    for (v of union) { }
         ~
!!! error TS2322: Type 'string | number | symbol' is not assignable to type 'symbol'.
!!! error TS2322:   Type 'string' is not assignable to type 'symbol'.